# Online_School

./: .env.sample  Dockerfile  README.md  auth_data.json  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
custom/: mixins.py
materials/: models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/management/commands/: bulk_create_courses.py  bulk_create_lessons.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: bulk_create_payments.py  bulk_create_users.py  create_super_user.py  create_test_user.py
